<resources>
    <string name="app_name">羚羊视频云</string>
    <string name="app_reg">注册</string>
    <string name="app_share">共享</string>
    <string name="app_bind">第三步 绑定摄像头</string>
    <string name="cloud_login_fail">云平台登录失败</string>
    <string name="cloud_login_fail_and_exit">云平台登录失败,即将退出程序</string>
    <string name="app_login">登录</string>
    <string name="app_findpassword">找回密码?</string>
    <string name="app_reset_password">忘记密码？</string>
    <string name="app_login_input_phone">请输入手机号码</string>
    <string name="app_login_input_identify">请输入验证码</string>
    <string name="app_login_input_email">请输入邮箱</string>
    <string name="app_login_input_pwd">请输入密码</string>
    <string name="app_login_pwd_notify">密码是长度为6~13位的数字，字母和下划线</string>
    <string name="app_login_get_identify">获取验证码</string>
    <string name="app_login_Reacquire">重新获取</string>
    <string name="login_bind_registed_email">绑定已注册邮箱</string>
    <string name="login_error_phone">你输入的手机号码格式不正确</string>
    <string name="login_identity_was_send">验证码已发送至手机</string>
    <string name="login_identity_send_fail">验证码发送失败</string>
    <string name="app_me">我</string>
    <string name="app_setting">摄像机设置</string>
    <string name="app_login_error">登录失败</string>
    <string name="app_login_waiting">正在登陆请稍后。。。</string>
    <string name="app_login_notbenull">用户名密码不能为空！</string>
    <string name="app_findpassword_success">已发送密码邮件到你的邮箱，快快去查看吧！</string>
    <string name="app_reactivate_success">已发送激活邮件到你的邮箱，快快去查看吧！</string>
    <string name="app_findpassword_error_email_notexist">你输入的邮箱地址不存在</string>
    <string name="app_reg_suceess">注册成功,请登录你的注册邮箱做激活验证！</string>
    <string name="app_share_success">分享成功</string>
    <string name="app_share_error_notbenull">分享用户不能为空</string>
    <string name="app_share_error">分享失败</string>
    <string name="app_reg_notbenull">用户名昵称密码不能为空！</string>
    <string name="my_attention">我的关注</string>
    <string name="attention">关注</string>
    <string name="unattention">取消关注</string>
    <string name="attention_mine">我的摄像机</string>
    <string name="discovery">发现</string>
    <string name="mine_record">我的</string>
    <string name="action_settings">Settings</string>
    <string name="waiting">请稍候…</string>
    <string name="req_exception">任务请求异常</string>
    <string name="camera_state_online">在线</string>
    <string name="camera_state_offline">离线</string>
    <string name="date_today">今天</string>
    <string name="date_lastday">昨天</string>
    <string name="date_am">上午</string>
    <string name="date_pm">下午</string>
    <string name="livecamera_state_offline">离线状态</string>
    <string name="livecamera_state_ready">就绪状态</string>
    <string name="livecamera_state_prepare">准备状态</string>
    <string name="livecamera_state_connecting">正在连接中</string>
    <string name="livecamera_state_relay">正在请求转发</string>
    <string name="livecamera_state_living">正在直播</string>
    <string name="livecamera_state_stoping">断开连接中 </string>
    <string name="livecamera_state_error">网络不稳定，摄像机断开连接请重试</string>
    <string name="livecamera_begin_speak">开始对讲</string>
    <string name="livecamera_end_speak">结束对讲</string>
    <string name="camera_set_public">设为公众摄像机</string>
    <string name="camera_cancel_public">取消公众摄像机</string>
    <string name="camera_confirm_unbind">确定要取消绑定该摄像机吗？</string>
    <string name="camera_confirm_upgrade">发现新版本</string>
    <string name="camera_confirm_forceupgrade">需要升级版本才能继续使用</string>
    <string name="camera_view_record">历史回放</string>
    <string name="camera_set_status_light">摄像机状态灯</string>
    <string name="camera_set_mic">摄像机麦克风</string>
    <string name="camera_set_rate">摄像机码流清晰度</string>
    <string name="camera_set_region">请选择离放置摄像机最近的城市</string>
    <string name="camera_set_public_region_type">请选择支持公众直播范围</string>
    <string name="camera_set_mic_volume">内置麦克风音量</string>
    <string name="camera_set_screen_origien">摄像机画面</string>
    <string name="camera_set_cloud_record">摄像机开启云存储</string>
    <string name="menu_ratio">画面比例</string>
    <string name="menu_list">播放列表</string>
    <string name="mc_exit">退出播放</string>
    <string name="confirm_wifi_password">请选择摄像机要连接的WiFi</string>
    <string name="wifi_ssid_hint">点击这里选择WiFi</string>
    <string name="wifi_name_hint">请输入WiFi名称</string>
    <string name="wifi_password_hint">请输入WiFi密码</string>
    <string name="wifi_confirm_password_hint">请再次输入WiFi密码</string>
    <string name="wifi_password_less_than_eight">WiFi密码至少需要8位</string>
    <string name="wifi_password_less_than_five">WiFi密码至少需要8位</string>
    <string name="add_camera_cancel">是否取消添加摄像机？</string>
    <string name="continue_wait">继续等待</string>
    <string name="error_response_Conflict_claim">此摄像机已被添加过，需要该账号删除摄像机后，您才能添加
</string>
    <string name="other_account">其他网友</string>
    <string name="add_account">网友</string>
    <string name="wifi_error">生成WiFi信息错误，请重试！</string>
    <string name="conn_to_wifi">连接WiFi</string>
    <string name="add_camera_sel">添加摄像机</string>
    <string name="set_network_notice">是否设置网络？</string>
    <string name="set_wifi">选择摄像机要连接的WiFi</string>
    <string name="wireless_conn">无线连接模式</string>
    <string name="add_camera">选择要添加的摄像机</string>
    <string name="set_mobile">设置移动网络</string>
    <string name="open_network">请打开WiFi开关后再设置</string>
    <string name="choose_wifi">请先选择WiFi</string>
    <string name="choose_bindcamera">请先选择要连接的摄像机</string>
    <string name="camera_setting_no_wifi_ap">扫描周围的WiFi失败，请重试</string>
    <string name="camera_setting_no_camera_ap">扫描周围的摄像机失败，请重试</string>
    <string name="add_first_step">第一步 准备摄像机</string>
    <string name="add_second_step">第二步 连接WiFi</string>
    <string name="add_third_step">第三步 添加摄像机</string>
    <string name="add_fourth_step">第四步 摄像机名称</string>
    <string name="config_hint_text1">请查看摄像机指示灯是否</string>
    <string name="add_twinkle">闪烁</string>
    <string name="cemera_name">名称</string>
    <string name="red">红</string>
    <string name="blue">蓝</string>
    <string name="cancel">取消</string>
    <string name="complete">完成</string>
    <string name="add_twinkleed">已看到红蓝灯光闪烁</string>
    <string name="add_untwinkle">没有红蓝闪烁？</string>
    <string name="notify_title">红蓝灯没有交替闪烁？</string>
    <string name="notify_step1">请重新插拔摄像机电源，确保电源和数据线插好</string>
    <string name="notify_step2">请使用顶针轻插摄像机背面的reset孔，按住1S后松开听到"滴"声约10秒后指示灯变成红蓝灯交替闪烁表示复位成功。</string>
    <string name="notify_step3">复位成功后，请再次添加摄像机</string>
    <string name="config_hint_text21">用顶针轻插摄像机背后配置孔</string>
    <string name="app_pwd_show">显示密码</string>
    <string name="app_pwd_hint">隐藏密码</string>
    <string name="refreshing">正在刷新。。</string>
    <string name="wifi_scan_failure">扫描失败。。</string>
    <string name="add_success">添加摄像机成功</string>
    <string name="add_check_mycamera">马上查看我的摄像机吧</string>
    <string name="get_my_camera">领取我的摄像机</string>
    <string name="add_connecting">摄像机正在联网…</string>
    <string name="add_connecting_camera">正在连接摄像机,请稍后…</string>
    <string name="add_waiting_des">需要大约2分钟，您就可以用手机观看摄像机拍到的美景了</string>
    <string name="title_activity_regist">RegistActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="current_net_unused">当前网络不可用，请检查你的网络配置！</string>
    <string name="bind_suc">绑定成功</string>
    <string name="bind_fail">绑定失败</string>
    <string name="net_error">网络异常，请稍后重试</string>
    <string name="set_public_suc">已设为公众摄像机</string>
    <string name="set_public_fail">设为公众摄像机失败</string>
    <string name="input_nickname">输入昵称</string>
    <string name="add_third_fail_notify">摄像机连网失败</string>
    <string name="add_third_fail_of_save_wifi">保存摄像机热点至本地失败</string>
    <string name="add_third_fail_getsn">摄像机SN获取失败</string>
    <string name="add_third_fail_notify_msg">可能是您的摄像机配置的WiFi有问题，导致无法成功连接，请重新选择摄像机所要连接的WiFi再连接一次。</string>
    <string name="add_third_fail_notify_again">重新添加摄像机</string>
    <string name="add_third_fail_notify_gomain">返回首页</string>
    <string name="add_can_not_back">正在添加摄像机，请稍等</string>
    <string name="add_fourth_fail_notify">摄像机绑定失败</string>
    <string name="add_fourth_fail_msg_notify">该摄像机已被绑定，请先解除绑定</string>
    <string name="bind_type_select_title">请选择绑定方式</string>
    <string name="bind_for_wifi">热点绑定</string>
    <string name="bind_for_voice">声波绑定</string>
    <string name="camera_is_binding">摄像机连网中....</string>
    <string name="register_title">注册</string>
    <string name="pick_from_gallery">从相册中选择</string>
    <string name="take_photo">拍照</string>
    <string name="set_head">请设置头像</string>
    <string name="set_nickname">请设置昵称</string>
    <string name="app_reg_error">注册失败</string>
    <string name="app_reset_error">设置失败</string>
    <string name="app_reset_suc">密码重置设置成功</string>
    <string name="app_reg_suc">注册成功</string>
    <string name="app_regist_phone">手机号</string>
    <string name="app_regist_identify">验证码</string>
    <string name="app_regist_pwd">密码（不少于6位）</string>
    <string name="app_reset_regist_pwd">重置密码</string>
    <string name="app_new_pwd">新密码（不少于6位）</string>
    <string name="reset_confirm">确定</string>
    <string name="mine">我</string>
    <string name="mine_attention">我的关注</string>
    <string name="mine_about">关于</string>
    <string name="mine_file">我的文件</string>
    <string name="mine_visual_telephone">视频电话</string>
    <string name="mine_exit">退出登入</string>
    <string name="mine_head">头像</string>
    <string name="mine_name">昵称</string>
    <string name="mine_phone">手机号</string>
    <string name="mine_user_info">个人信息</string>
    <string name="mine_upload_head_suc">头像上传成功</string>
    <string name="mine_upload_head_fail">头像上传失败</string>
    <string name="mine_save">保存</string>
    <string name="mine_name_can_not_null">请输入昵称</string>
    <string name="mine_commit_suc">提交成功</string>
    <string name="mine_commit_fail">提交失败</string>
    <string name="mine_myfile_all">全部</string>
    <string name="mine_myfile_picture">图片</string>
    <string name="mine_myfile_video">视频</string>
    <string name="mine_myattention_cancel">取消关注</string>
    <string name="mine_myattention">全部关注</string>
    <string name="was_cancel">已取消</string>
    <string name="title_activity_set">SetActivity</string>
    <string name="mine_tel">手机号码：</string>
    <string name="mine_file_not_exist">文件不存在</string>
    <string name="set">设置</string>
    <string name="set_public">设为公众摄像机</string>
    <string name="set_mic">麦克风</string>
    <string name="set_definition">清晰度</string>
    <string name="set_cloud_save">云存储</string>
    <string name="set_relieve_bind">解除绑定</string>
    <string name="set_definition_hd">超清</string>
    <string name="set_definition_sd">高清</string>
    <string name="set_definition_fluent">流畅</string>
    <string name="set_suc">设置成功</string>
    <string name="set_relieve_suc">已解除绑定</string>
    <string name="set_null"></string>
    <string name="live_add_device">添加一个新设备</string>
    <string name="live_title">要直播</string>
    <string name="live_set_suc">设置成功</string>
    <string name="live_set_fail">设置失败</string>
    <string name="bind_input_camera_name">请输入摄像机名称</string>
    <string name="app_network_error">网络已断开,请检查你的网络</string>
    <string name="pp_camera_type">设备类型：</string>
    <string name="pp_camera_location">设备位置：</string>
    <string name="pp_camera_online_num">当前在线人数：</string>
    <string name="pp_camera_total_watch_num">总观看次数：</string>
    <string name="pp_camera_start_time">启动耗时：</string>
    <string name="share_to_me">分享给我的摄像机</string>
    <string name="all">全部</string>
    <string name="camera_player">摄像机直播</string>
    <string name="mobile_player">手机直播</string>
    <string name="tv_prepare_mobile_live">准备直播</string>
    <string name="resolution">分辨率</string>
    <string name="rate">码率</string>
    <string name="frame_rate">帧率</string>
    <string name="location">定位</string>
    <string name="start_mobile_live">开始直播</string>
    <string name="live_use_mobile">使用手机直播</string>
    <string name="menu_add_camera_sel">添加摄像机</string>
    <string name="menu_go_to_public">去广场看看</string>
    <string name="menu_mobile_live">手机直播</string>
</resources>