<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <include
        android:id="@+id/top_bar"
        layout="@layout/common_header_bar" />

    <TextView
        android:id="@+id/tv_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/config_hint_text1"
        android:textColor="@color/text_dark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_twinkle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_check"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="@string/add_twinkle"
        android:textColor="@color/black"
        android:textSize="26sp" />
    
    <ImageView 
        android:id="@+id/iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bg_shoot"
        android:layout_below="@+id/tv_twinkle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        />
    

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/selector_btn_bg_green"
        android:text="@string/add_twinkleed"
        android:textColor="@android:color/white"
        android:layout_below="@+id/iv"
        android:layout_marginTop="50dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_untwinkle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_below="@+id/btn_next"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:text="@string/add_untwinkle"
        android:textColor="@color/text_dark"
        android:textSize="12sp" />

</RelativeLayout>