<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mine_bg_gray"
    android:orientation="vertical">

    <include
        layout="@layout/common_header_bar"
        android:id="@+id/top"
        />

    <EditText
        android:id="@+id/et_phone"
        style="@style/HaveDrawableEditTextOfRegistStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_iphone"
        android:hint="@string/app_regist_phone"
        android:inputType="phone"
        android:singleLine="true"
        android:text="" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/sp_line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <EditText
            android:id="@+id/et_identify"
            style="@style/HaveDrawableEditTextOfRegistStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:drawableLeft="@drawable/auth_code"
            android:hint="@string/app_regist_identify"
            android:inputType="number"
            android:singleLine="true"
            android:text="" />

        <Button
            android:id="@+id/btn_get_identity"
            style="@style/CommonButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="18dp"
            android:background="@drawable/selector_btn_empty"
            android:padding="6dp"
            android:text="@string/app_login_get_identify"
            android:textColor="@color/text_gray"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/sp_line_color" />
    <EditText
        android:id="@+id/et_pwd"
        style="@style/HaveDrawableEditTextOfRegistStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_locked"
        android:hint="@string/app_regist_pwd"
        android:singleLine="true"
        android:text="" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/sp_line_color" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/selector_btn_bg_green"
        android:gravity="center"
        android:text="@string/register_title"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

</LinearLayout>
