<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="266dp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_btn_empty"  
      android:layout_gravity="center"
         android:paddingLeft="33dp"
         android:paddingRight="33dp"
         android:orientation="vertical"
    >

        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_fourth_fail_notify"
            android:textColor="@color/text_dark"
            android:textSize="16sp"
            android:layout_marginTop="28dp"
            />
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_fourth_fail_msg_notify"
            android:textColor="@color/text_dark"
            android:textSize="12sp"
            android:layout_marginTop="18dp"
            />
        
        <TextView 
            android:id="@+id/gomain"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_third_fail_notify_gomain"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginTop="26dp"
            android:gravity="center"
            android:background="@drawable/shape_addfail_bg"
            android:layout_marginBottom="20dp"
            />
        
         
    

</LinearLayout>