<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_centerInParent="true"
              android:background="@color/white"
              android:orientation="vertical">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="94dp"
        android:src="@drawable/ic_login"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_phone"
            style="@style/HaveDrawableEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/ic_iphone"
            android:hint="@string/app_login_input_phone"
            android:inputType="phone"
            android:singleLine="true"
            android:text=""/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/sp_line_color"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <EditText
                android:id="@+id/et_pwd"
                style="@style/HaveDrawableEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_locked"
                android:hint="@string/app_login_input_pwd"
                android:inputType="textPassword"
                android:singleLine="true"
                android:text=""/>

            <TextView
                android:id="@+id/tv_reset_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:text="@string/app_reset_password"
                android:textColor="@color/text_gray"
                android:textSize="14sp"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/sp_line_color"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/selector_btn_bg_green"
        android:gravity="center"
        android:text="@string/app_login"
        android:textColor="@android:color/white"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btn_regist"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_btn_empty"
        android:gravity="center"
        android:text="@string/register_title"
        android:textColor="@color/text_dark"
        android:textSize="16sp"/>
</LinearLayout>
