<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#55000000"
    android:gravity="center_horizontal"
    android:clickable="false"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="336.7dp"
        android:layout_height="600dp"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/img_add_success"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_success"
            android:textColor="#ffffff"
            android:textSize="29.3dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_check_mycamera"
            android:textColor="#ffffff"
            android:textSize="19.3dp" />

        <View 
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/btn_add_success"
            android:layout_width="match_parent"
            android:layout_height="53.3dp"
            android:layout_marginBottom="22dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/bg_add_wifi_list"
            android:onClick="onClick"
            android:text="@string/get_my_camera" />
    </LinearLayout>

</RelativeLayout>