<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="90dp"
    android:layout_height="160dp">

    <LinearLayout
        android:id="@+id/ll_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_resolution_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_hd"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/choice"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/set_definition_hd"
            android:textColor="@color/text_white"
            android:textSize="14sp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/half_transparent_white"
            />

        <TextView
            android:id="@+id/tv_sd"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/set_definition_sd"
            android:textColor="@color/text_white"
            android:textSize="14sp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/half_transparent_white"
            />

        <TextView
            android:id="@+id/tv_fluent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:drawablePadding="6dp"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/set_definition_fluent"
            android:textColor="@color/text_white"
            android:textSize="14sp"
            />
    </LinearLayout>
</RelativeLayout>
